<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_margin="8dp">
    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/et_user_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"/>
    <EditText
        android:id="@+id/et_user_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ph_no"/>
    <EditText
        android:id="@+id/et_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"/>
    <EditText
        android:id="@+id/et_user_linkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/linked_in"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/save_btn"
            android:onClick="saveDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>


    </LinearLayout>
</LinearLayout>