<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:padding="3dp"
                android:id="@+id/tv_create_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:text="@string/create_profile"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/et_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_create_profile"
                android:autofillHints=""
                android:hint="@string/profile_name"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/et_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_name"
                android:autofillHints=""
                android:hint="@string/profile_email_id"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/save_profile_button"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_email"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/save"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>